# DataSet

./: .gitignore  CMakeLists.txt  README.md  data_set.cpp  data_set.h  item.cpp  item.h  main.cpp  split_string.h  string_clean.cpp  string_clean.h
tests/: CMakeLists.txt  compare_test.cpp  data_set_test.cpp  item_test.cpp  split_string_test.cpp  string_clean_test.cpp
